--- a/app/src/main/res/layout/module_news.xml
+++ b/app/src/main/res/layout/module_news.xml
@@ -9,7 +9,7 @@
     android:foreground="?attr/selectableItemBackground">
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/image_news"
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:src="@drawable/img_news"
@@ -18,13 +18,12 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-
+        android:id="@+id/text_news"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="some random news, some random news, some random news"
-        app:layout_constraintBottom_toBottomOf="@id/imageView"
-        app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toEndOf="@id/image_news"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginStart="35dp"
         android:maxLines="2"
