--- a/app/src/main/res/layout/activity_coin.xml
+++ b/app/src/main/res/layout/activity_coin.xml
@@ -6,4 +6,26 @@
     android:layout_height="match_parent"
     tools:context=".CoinActivity">
 
+    <include layout="@layout/module_toolbar"
+        android:id="@+id/module_toolbar"/>
+
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/module_toolbar">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/module_chart"
+                android:id="@+id/module_chart"/>
+
+            <include layout="@layout/module_statics"
+                android:id="@+id/module_statistic"/>
+
+            <include layout="@layout/module_about"
+                android:id="@+id/module_about"/>
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
