--- a/app/src/main/res/layout/module_statics.xml
+++ b/app/src/main/res/layout/module_statics.xml
@@ -142,7 +142,7 @@
                 />
 
             <TextView
-                android:id="@+id/tvAvgVolumeAmount"
+                android:id="@+id/tvTotalVolumeAmount"
                 style="@style/CoinBitText.Body1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -152,14 +152,14 @@
                 android:text="27M"
                 />
             <TextView
-                android:id="@+id/tvAvgVolumeLabel"
+                android:id="@+id/tvTotalVolumeLabel"
                 style="@style/CoinBitText.TitleAlternate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeAmount"
+                app:layout_constraintTop_toBottomOf="@id/tvTotalVolumeAmount"
                 android:paddingTop="6dp"
-                android:text="Average Volume"
+                android:text="Total Volume"
                 />
 
             <TextView
@@ -168,7 +168,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/tvAvgVolumeLabel"
+                app:layout_constraintTop_toBottomOf="@id/tvTotalVolumeLabel"
                 android:paddingTop="16dp"
                 android:text="$867.34B"
                 />
